assets/css/main.css
/* ... */
.home .methodologies .methodology .metod-card h3 svg {
    width: 50px;
    height: 50px;
    color: var(--text-icon-color);
    flex-shrink: 0;
}

@media (min-width: 992px) {
    .home .methodologies .methodology .metod-card h3 svg {
        width: 60px;
        height: 60px;
    }
}

@media (min-width: 1200px) {
    .home .methodologies .methodology .metod-card h3 svg {
        width: 75px;
        height: 75px;
    }
}

/* Calendario */
.home .calendar .row .title .iavm-h2 {
    text-align: center;
    margin-bottom: 50px;
}

.home .calendar .row.calendars>div:first-child {
    margin-bottom: 50px;
}

.home .calendar .row.calendars {
    padding-bottom: 100px;
}

.calendar-card {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: auto;
    border-radius: 8px;
    border: 1px solid var(--secondary-color);
    overflow: hidden;
}

.calendar-card .header {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    background-color: var(--secondary-color);
    padding: 21px 24px;
}

.calendar-card .body {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    width: 100%;
}

.calendar-card .body .item {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    padding: 16px 24px;
    gap: 9px;
}

.calendar-card .body .item:hover {
    background-color: var(--box-hover-color);
    outline: 2px dashed var(--secondary-color);
    outline-offset: 0;
}

.calendar-card .body .item:focus-visible {
    background-color: var(--box-hover-color);
    outline: 8px solid var(--accent-color);
    outline-offset: -8px;
}

.calendar-card .body .item svg{
    color: var(--text-icon-color);
}

.calendar-card .body .item svg:hover {
    color: var(--accent-color);
}

.calendar-card .body .item:focus-visible svg {
    color: var(--accent-color);
}

.calendar-card .body .item .content .date {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 4px;
}

.calendar-card .body .item .content .date svg {
    width: 30px;
    height: 30px;
}

.calendar-card .body .item .content .date span {
    color: var(--secondary-color);
    font-weight: 600;
}

.calendar-card .body .item .content .iavm-h3 {
    margin: 0;
}
/* Location */
.home .location .come {
    background-color: var(--primary-color);
}
.home .location .come .content,
.home .location .arrive {
    padding-block: 50px;
}
.home .location .arrive .transport {
    display: flex;
    flex-direction: column;
    gap: 20px;
}
.home .location .arrive .transport .items-list {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 20px;
}
.home .location .arrive .transport .transport-item {
    display: flex;
    align-items: flex-start;
    gap: 30px;
}
.home .location .arrive .transport .transport-item svg {
    width: 80px;
    height: 80px;
    flex-shrink: 0;
}
.home .location .arrive .transport .transport-item .content {
    display: flex;
    flex-direction: column;
    gap: 10px;
}
.home .location .arrive .transport .transport-item .content .micro-item {
    display: flex;
    flex-direction: column;
    gap: 10px;
}
.home .location .arrive .transport .transport-item .content .micro-item .numbers {
    display: flex;
    gap: 14px;
    margin: 0;
    padding: 0;
}
.home .location .arrive .transport .transport-item .content .micro-item .numbers li {
    display: flex;
    background-color: transparent;
    padding: 0 12px;
    border-radius: 99999px;
    color: var(--dark-color);
}
.home .location .arrive .transport .transport-item .content .micro-item .numbers li.green {
    background-color: #57A639;
}
.home .location .arrive .transport .transport-item .content .micro-item .numbers li.red {
    background-color: #CB2821;
}
.home .location .arrive .transport .transport-item .content .micro-item .numbers li.blue {
    background-color: #3C82BD;
}
/*------------------------------- Pagina Admision -------------------------------*/
/* Hero section */
.page-template-page-admision .hero .info {
    background-color: var(--secondary-color);
    padding-block: 40px;
}

.page-template-page-admision .hero .info .container .row {
    justify-content: center;
}

.page-template-page-admision .hero .info .content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    gap: 30px;
}

.page-template-page-admision .hero .info .content .item {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 16px;
}

.page-template-page-admision .hero .info .content .item:first-child {
    align-items: flex-start;
}

.page-template-page-admision .hero .info p {
    color: var(--light-color);
    width: 100%;
}

.page-template-page-admision .hero .info svg {
    width: 32px;
    height: 32px;
    flex-shrink: 0;
    color: var(--light-color);
}

.page-template-page-admision .requirements>.container {
    padding-block: 100px;
}

.page-template-page-admision .requirements .container .titulo {
    margin-bottom: 36px;
}

.page-template-page-admision .requirements .container .requirements-list ol {
    list-style: none;
    counter-reset: requirements-counter;
    display: flex;
    flex-direction: column;
    gap: 24px;
}

.page-template-page-admision .requirements .container .requirements-list ol li {
    position: relative;
    counter-increment: requirements-counter;
    display: flex;
    align-items: center;
    gap: 30px;
    width: 100%;
    font-size: 1rem;
}

.page-template-page-admision .requirements .container .requirements-list ol li span {
    font-size: 64px;
    font-weight: 800;
    line-height: 1;
    font-family: var(--secondary-font);
    color: var(--text-icon-color);
    width: 73px;
    aspect-ratio: 1/1;
    flex-shrink: 0;
}
/* ... */

